--- a/webstruct/webClient.scss
+++ b/webstruct/webClient.scss
@@ -1,14 +1,14 @@
 @import 'baseComponents/header/header.scss';
 @import 'baseComponents/footer/footer.scss';
-
 html {
+    font-size: 10px;
+
     /* sticky footer style */
     position: relative;
     min-height: 100%;
 }
 body {
     /*
-     * sticky footer style
      * Margin bottom by footer height
      */
     margin-bottom: 175px;
